// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Updater Input Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "1",
      "input_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "input_transaction_id": "0",
      "output_block_id": 10,
      "output_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "output_transaction_id": "0",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "2",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 11,
      "output_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Input Updater Input Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "1",
      "input_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "input_transaction_id": "0",
      "output_block_id": 10,
      "output_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "output_transaction_id": "0",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "2",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 11,
      "output_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Input Updater Input Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "1",
      "input_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "input_transaction_id": "0",
      "output_block_id": 10,
      "output_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "output_transaction_id": "0",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "2",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 11,
      "output_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Input Updater Input Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "1",
      "input_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "input_transaction_id": "0",
      "output_block_id": 10,
      "output_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "output_transaction_id": "0",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "2",
      "input_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "input_transaction_id": "1",
      "output_block_id": 11,
      "output_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Input Updater Input Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "1",
      "input_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "input_transaction_id": "0",
      "output_block_id": 10,
      "output_transaction_hash": "1111111111111111111111111111111111111111111111111111111111111111",
      "output_transaction_id": "0",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "2",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 11,
      "output_transaction_hash": "2222222222222222222222222222222222222222222222222222222222222222",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;
